--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LensCraft | Professional Photography</title>
+    <title>Chayathma Photography | Capturing Life's Precious Moments</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome CDN for icons -->
+    <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
+        }
+        .heading-font {
+            font-family: 'Playfair Display', serif;
         }
         .gradient-bg {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -35,6 +38,21 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+        .glass-effect {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+        .image-hover {
+            transition: all 0.5s ease;
+            overflow: hidden;
+        }
+        .image-hover:hover {
+            transform: scale(1.05);
+        }
+        .image-hover:hover img {
+            transform: scale(1.1);
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -42,7 +60,7 @@
     <nav class="fixed w-full z-50 bg-white/90 backdrop-blur-sm py-4 shadow-sm">
         <div class="container mx-auto px-6 flex justify-between items-center">
             <div class="flex items-center">
-                <h1 class="text-2xl font-bold text-gradient">LensCraft</h1>
+                <h1 class="text-2xl font-bold text-gradient heading-font">Chayathma Photography</h1>
             </div>
             <div class="hidden md:flex space-x-8">
                 <a href="#" class="text-gray-700 hover:text-purple-600 font-medium transition-colors">Home</a>
@@ -67,7 +85,7 @@
         <div class="container mx-auto px-6">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0">
-                    <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight">Capture Your <span class="text-yellow-300">Perfect Moments</span></h1>
+                    <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight heading-font">Capture Your <span class="text-yellow-300">Perfect Moments</span></h1>
                     <p class="text-xl mb-8 text-gray-100">Professional photography services for weddings, portraits, events, and commercial projects. Let us tell your story through stunning imagery.</p>
                     <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
                         <button class="bg-white text-purple-600 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition-colors">
@@ -101,7 +119,7 @@
     <section class="py-20 bg-white">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Our Photography Services</h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4 heading-font">Our Photography Services</h2>
                 <p class="text-gray-600 max-w-2xl mx-auto">We specialize in various photography styles to capture your most important moments with artistic vision and technical excellence.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
@@ -141,11 +159,11 @@
     <section class="py-20 bg-gray-100">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Featured Work</h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4 heading-font">Featured Work</h2>
                 <p class="text-gray-600 max-w-2xl mx-auto">A glimpse into our portfolio showcasing diverse photography styles and creative approaches.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="rounded-2xl overflow-hidden shadow-lg hover-lift group">
+                <div class="rounded-2xl overflow-hidden shadow-lg hover-lift group image-hover">
                     <div class="h-80 bg-gradient-to-br from-purple-500 to-pink-500 relative overflow-hidden">
                         <div class="absolute inset-0 bg-black/30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <button class="bg-white text-purple-600 px-6 py-2 rounded-full font-semibold">View Project</button>
@@ -156,7 +174,7 @@
                         <p class="text-gray-600">St. Mary's Cathedral</p>
                     </div>
                 </div>
-                <div class="rounded-2xl overflow-hidden shadow-lg hover-lift group">
+                <div class="rounded-2xl overflow-hidden shadow-lg hover-lift group image-hover">
                     <div class="h-80 bg-gradient-to-br from-blue-500 to-teal-500 relative overflow-hidden">
                         <div class="absolute inset-0 bg-black/30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <button class="bg-white text-purple-600 px-6 py-2 rounded-full font-semibold">View Project</button>
@@ -167,7 +185,7 @@
                         <p class="text-gray-600">Downtown Series</p>
                     </div>
                 </div>
-                <div class="rounded-2xl overflow-hidden shadow-lg hover-lift group">
+                <div class="rounded-2xl overflow-hidden shadow-lg hover-lift group image-hover">
                     <div class="h-80 bg-gradient-to-br from-orange-500 to-red-500 relative overflow-hidden">
                         <div class="absolute inset-0 bg-black/30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <button class="bg-white text-purple-600 px-6 py-2 rounded-full font-semibold">View Project</button>
@@ -187,15 +205,54 @@
         </div>
     </section>
 
-    <!-- Testimonials -->
+    <!-- About Section -->
     <section class="py-20 bg-white">
         <div class="container mx-auto px-6">
+            <div class="flex flex-col md:flex-row items-center">
+                <div class="md:w-1/2 mb-10 md:mb-0">
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-6 heading-font">About Chayathma Photography</h2>
+                    <p class="text-gray-600 mb-4">With over a decade of experience, Chayathma Photography has been capturing life's most precious moments with artistry and passion.</p>
+                    <p class="text-gray-600 mb-6">Our approach combines technical excellence with a creative eye for detail, ensuring that every photograph tells a unique story.</p>
+                    <div class="flex space-x-4">
+                        <div class="text-center">
+                            <div class="text-3xl font-bold text-gradient mb-2">500+</div>
+                            <div class="text-gray-600">Happy Clients</div>
+                        </div>
+                        <div class="text-center">
+                            <div class="text-3xl font-bold text-gradient mb-2">1000+</div>
+                            <div class="text-gray-600">Projects Completed</div>
+                        </div>
+                        <div class="text-center">
+                            <div class="text-3xl font-bold text-gradient mb-2">15+</div>
+                            <div class="text-gray-600">Awards Won</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="md:w-1/2 flex justify-center">
+                    <div class="relative">
+                        <div class="w-80 h-80 bg-gradient-to-br from-purple-100 to-indigo-100 rounded-full flex items-center justify-center">
+                            <div class="w-64 h-64 bg-gradient-to-tr from-purple-200 to-indigo-200 rounded-full flex items-center justify-center">
+                                <i class="fas fa-user text-purple-500 text-6xl"></i>
+                            </div>
+                        </div>
+                        <div class="absolute -top-4 -right-4 w-24 h-24 bg-yellow-400 rounded-full flex items-center justify-center shadow-lg">
+                            <span class="text-gray-800 font-bold text-sm text-center">Professional Photographer</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="py-20 bg-gray-100">
+        <div class="container mx-auto px-6">
             <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Client Testimonials</h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4 heading-font">Client Testimonials</h2>
                 <p class="text-gray-600 max-w-2xl mx-auto">Hear what our clients have to say about their experience working with us.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="bg-gray-50 p-8 rounded-2xl border border-gray-100">
+                <div class="bg-white p-8 rounded-2xl shadow-md hover-lift">
                     <div class="flex items-center mb-6">
                         <div class="w-12 h-12 gradient-bg rounded-full flex items-center justify-center text-white font-bold text-lg">JS</div>
                         <div class="ml-4">
@@ -212,7 +269,7 @@
                         <i class="fas fa-star"></i>
                     </div>
                 </div>
-                <div class="bg-gray-50 p-8 rounded-2xl border border-gray-100">
+                <div class="bg-white p-8 rounded-2xl shadow-md hover-lift">
                     <div class="flex items-center mb-6">
                         <div class="w-12 h-12 gradient-bg rounded-full flex items-center justify-center text-white font-bold text-lg">SR</div>
                         <div class="ml-4">
@@ -229,7 +286,7 @@
                         <i class="fas fa-star"></i>
                     </div>
                 </div>
-                <div class="bg-gray-50 p-8 rounded-2xl border border-gray-100">
+                <div class="bg-white p-8 rounded-2xl shadow-md hover-lift">
                     <div class="flex items-center mb-6">
                         <div class="w-12 h-12 gradient-bg rounded-full flex items-center justify-center text-white font-bold text-lg">MC</div>
                         <div class="ml-4">
@@ -253,7 +310,7 @@
     <!-- CTA Section -->
     <section class="py-20 gradient-bg text-white">
         <div class="container mx-auto px-6 text-center">
-            <h2 class="text-3xl md:text-4xl font-bold mb-6">Ready to Create Something Beautiful Together?</h2>
+            <h2 class="text-3xl md:text-4xl font-bold mb-6 heading-font">Ready to Create Something Beautiful Together?</h2>
             <p class="text-xl mb-10 max-w-2xl mx-auto text-gray-100">Let's discuss your project and bring your vision to life with stunning photography that tells your unique story.</p>
             <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
                 <button class="bg-white text-purple-600 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition-colors">
@@ -271,14 +328,14 @@
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-2xl font-bold text-gradient mb-4">LensCraft</h3>
+                    <h3 class="text-2xl font-bold text-gradient mb-4 heading-font">Chayathma Photography</h3>
                     <p class="text-gray-400">Professional photography services with a creative vision and technical excellence.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-purple-600 transition-colors">
-                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-facebook-f"></i>
                         </a>
                         <a href="#" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-purple-600 transition-colors">
-                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-instagram"></i>
                         </a>
                         <a href="#" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-purple-600 transition-colors">
                             <i class="fab fa-twitter"></i>
@@ -304,8 +361,8 @@
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Wedding Photography</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Portrait Photography</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Commercial Photography</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Landscape Photography</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Event Photography</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Product Photography</a></li>
                     </ul>
                 </div>
                 <div>
@@ -313,30 +370,53 @@
                     <ul class="space-y-2 text-gray-400">
                         <li class="flex items-center">
                             <i class="fas fa-map-marker-alt mr-3 text-purple-500"></i>
-                            <span>123 Photography St, Creative City</span>
+                            <span>Sri Lanka</span>
                         </li>
                         <li class="flex items-center">
                             <i class="fas fa-phone mr-3 text-purple-500"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+94 XX XXX XXXX</span>
                         </li>
                         <li class="flex items-center">
                             <i class="fas fa-envelope mr-3 text-purple-500"></i>
-                            <span>hello@lenscraft.com</span>
+                            <span>hello@chayathmaphotography.com</span>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
-                <p>&copy; 2023 LensCraft Photography. All rights reserved.</p>
+                <p>&copy; 2023 Chayathma Photography. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
     <script>
-        // Simple script for mobile menu toggle (would need implementation)
+        // Simple script for mobile menu toggle
         document.addEventListener('DOMContentLoaded', function() {
-            // Add any interactive functionality here
-            console.log('LensCraft Photography Website Loaded');
+            const mobileMenuButton = document.querySelector('button.md\\:hidden');
+            const navLinks = document.querySelector('.hidden.md\\:flex');
+            
+            mobileMenuButton.addEventListener('click', function() {
+                navLinks.classList.toggle('hidden');
+                navLinks.classList.toggle('flex');
+                navLinks.classList.toggle('flex-col');
+                navLinks.classList.toggle('absolute');
+                navLinks.classList.toggle('top-16');
+                navLinks.classList.toggle('left-0');
+                navLinks.classList.toggle('w-full');
+                navLinks.classList.toggle('bg-white');
+                navLinks.classList.toggle('p-4');
+                navLinks.classList.toggle('space-y-4');
+            });
+            
+            // Add scroll effect to navbar
+            window.addEventListener('scroll', function() {
+                const nav = document.querySelector('nav');
+                if (window.scrollY > 100) {
+                    nav.classList.add('shadow-lg');
+                } else {
+                    nav.classList.remove('shadow-lg');
+                }
+            });
         });
     </script>
 </body>
